--- a/index.html
+++ b/index.html
@@ -1,88 +1,28 @@
 <!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <title>バグ生成器デモ</title>
-    <!-- スクリプトを読み込む -->
-    <script src="https://hanaokay.github.io/bug-generator/BugGenerator.js"></script>
-    <script>
-      // DOMContentLoadedイベントを待ってから初期化
-      document.addEventListener("DOMContentLoaded", () => {
-        // バグ生成器を初期化
-        const buggy = new BugGenerator();
-      });
-    </script>
-  </head>
-  <body>
-    <p>てすと</p>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Search
-          </button>
-        </form>
-      </div>
-      <button id="bug-button">バグを発生させる</button>
-    </nav>
-  </body>
+<html>
+<head>
+  <title>バグデモ</title>
+  <script src="https://hanaokay.github.io/bug-generator/BugGenerator.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const buggy = new BugGenerator();
+    });
+  </script>
+</head>
+<body>
+  <h1>バグ生成器デモ</h1>
+  <p>このページでは色々試すことができます。普通に操作してみてください！</p>
+  
+  <form>
+    <label>名前: </label>
+    <input type="text" placeholder="ここに名前を入力">
+    <br><br>
+    
+    <label>メッセージ: </label>
+    <textarea placeholder="ここにメッセージを入力"></textarea>
+    <br><br>
+    
+    <button type="button">送信する</button>
+  </form>
+</body>
 </html>
